# jemail

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: global.settings.yaml
data/accounts/: hotmail.settings.yaml
doc/: DESIGN.md  account.settings.schema.json  global.settings.schema.json
src/: entrypoint  main.py
src/jemail/: __init__.py  account.py  action.py  config.py  conversation.py  filter.py  imap.py  internaldate.py  store.py  utils.py
src/jemail/screens/: __init__.py  actions_screen.py  filter_screen.py  main_screen.py  preview_screen.py  stats_screen.py
test/: __init__.py  test_account_config.py  test_action.py  test_config.py  test_filter.py  test_imap_sync.py  test_store.py
tool/: entrypoint-dev  jemail
